fix: awards spacing

--- a/src/components/awards/style.scss
+++ b/src/components/awards/style.scss
@@ -15,7 +15,7 @@
       grid-template-columns: 32% 32% 32%;
       justify-content: space-evenly;
       padding-bottom: 10px;
-      grid-row-gap: 15px;
+      grid-row-gap: 10px;
 
       .image-wrapper {
         border-radius: 10px;
